--- a/css/index.css
+++ b/css/index.css
@@ -135,3 +135,6 @@ button[disabled=disabled], button:disabled {
 .paciente-incorrecto{
 	background-color: lightcoral;
 }
+#mensajes-errores{
+	color: red;
+}
