--- a/css/index.css
+++ b/css/index.css
@@ -138,3 +138,7 @@ button[disabled=disabled], button:disabled {
 #mensajes-errores{
 	color: red;
 }
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
